--- a/k8s-resources/06-annotations.yml
+++ b/k8s-resources/06-annotations.yml
@@ -6,5 +6,5 @@ metadata:
     jenkins.url: "https://github.com/eksctl-io/eksctl/blob/main/examples/19-kms-cluster.yaml"
 spec: 
   containers:
-    name: nginx
+  - name: nginx
     image: nginx
