--- a/k8s-resources/07-resources.yml
+++ b/k8s-resources/07-resources.yml
@@ -8,9 +8,12 @@ spec:
     image: nginx
     resources:
       requests:
-        memory: "68mi"
+        memory: "68Mi"
         cpu: "250m"
       limits:
         memory: "128Mi"
         cpu: "500m"
+
+
+
 
